--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-caurosel{
+  display: inline-flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.custom-caurosel::-webkit-scrollbar{
+  height: .5rem;
+}
+::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: var(--primary-color);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 100vw;
+  margin-inline: 1em;
+}
+::-webkit-scrollbar-thumb {
+  background: #a3a3a3;
+  border-radius: 100vw;
+  
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #878787;
+  border-radius: 100vw;
+}
