Connect server with stripe for checkout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 .custom-caurosel{
   display: inline-flex;
   overflow-x: scroll;
-  scroll-snap-type: x mandatory;
+  /* scroll-snap-type: x mandatory; */
   
   -ms-overflow-style: none;
   scrollbar-width: none;
