Create backend server for admin and fix client UI

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
 .custom-caurosel::-webkit-scrollbar {
   height: 0.5rem;
 }
